--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <header>
         <h1>Job Application Tracker</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#manage-applications">Manage Applications</a></li>
+            <li><a href="#view-application">View Application</a></li>
+            <li><a href="#update-application-status">Update Application Status</a></li>
+            <li><a href="#author-page">Author Page</a></li>
+        </ul>
+    </nav>
     <section id="manage-applications">
         <h2>Manage Applications</h2>
         <form method="post">
@@ -30,6 +38,7 @@
     </section>
     <section id="view-application">
         <h2>Application Details</h2>
+        <!-- Content for viewing application will be added here -->
     </section>
     <section id="update-application-status">
         <h2>Update Application Status</h2>
@@ -45,6 +54,15 @@
             </select><br>
             <input type="submit" value="Update Status">
         </form>
+    </section>
+    <section id="author-page">
+        <h2>Author Page</h2>
+        <p>Welcome to the Author's page! Here you can find information about the developer of this Job Application Tracker.</p>
+        <p><strong>Name:</strong> Your Name Here</p>
+        <p><strong>Contact:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p><strong>About:</strong> A brief description about you or your development journey.</p>
+        <p><strong>LinkedIn:</strong> <a href="your-linkedin-profile-url">Connect with me</a></p>
+        <p><strong>GitHub:</strong> <a href="your-github-profile-url">Follow my projects</a></p>
     </section>
     <footer>
     </footer>
